Allow password changing

--- a/views/update-password.hbs
+++ b/views/update-password.hbs
@@ -20,30 +20,29 @@
   </header>
 
   <hr>
-  <form action="/log-in" method="post">
+
+  Please check your email, (including possibly your spam folder,) for your authentication code and enter it below…
+
+  <br>
+  <br>
+
+  <form action="/update-password" method="post">
     <label for="email_input">Email</label>
-    <input id="email_input" type="email" name="email">
+    <input id="email_input" type="email" name="email" value="{{ email }}" placeholder="bob@email.com">
 
     <br>
 
-    <label for="password_input">Password</label>
+    <label for="authenticator_input">Authentication token</label>
+    <input id="authenticator_input" type="authenticator" name="authenticator" value="{{ authenticator }}" placeholder="abcdef01-2345-6789-abcd-ef0123456789">
+
+    <br>
+
+    <label for="password_input">New password</label>
     <input id="password_input" type="password" name="password">
 
     <br>
 
-    <button name="login" value="true">Log in</button>
-    {{#if redirecturl}}
-      <input type="hidden" name="redirecturl" value="/icy-ewe">
-    {{/if}}
-
-    <br>
-    <br>
-
-    Forgotten your password, or haven't gotten one yet?
-    <br>
-    Type your email above, then:
-    <br>
-    <button name="authenticate" value="true">Choose new password</button>
+    <button name="login" value="true">Update password</button>
   </form>
   <hr>
 </body>
