--- a/views/add-data.hbs
+++ b/views/add-data.hbs
@@ -115,7 +115,7 @@
               <div class="add-form__field">
                 <label for="input__person_role">Role</label>
                 <div>
-                  <input id="input__person_role" name="role_2" placeholder="CEO">
+                  <input id="input__person_role" name="role_2" type="text" placeholder="CEO">
                 </div>
               </div>
 
