--- a/views/chat.hbs
+++ b/views/chat.hbs
@@ -89,7 +89,7 @@
           <br>
 
           <button>Log in</button>
-          <input type="hidden" name="redirecturl" value="/icy-ewe">
+          <input type="hidden" name="redirecturl" value="/icy-ewe?room={{ query.room }}">
         </form>
       </main>
     </div>
