--- a/views/update-password.hbs
+++ b/views/update-password.hbs
@@ -27,16 +27,28 @@
   <br>
 
   <form action="/update-password" method="post">
-    <label for="email_input">Email</label>
-    <input id="email_input" type="email" name="email" value="{{ email }}" placeholder="bob@email.com">
+    <legend>Update password</legend>
 
+    {{#if email}}
+      <input id="email_input" type="hidden" name="email" value="{{ email }}">
+    {{else}}
+      <label for="email_input">Email</label>
+      <input id="email_input" type="email" name="email" placeholder="bob@email.com">
+
+      <br>
+    {{/if}}
+
+    {{#if authenticator}}
+      <input id="authenticator_input" type="hidden" name="authenticator" value="{{ authenticator }}">
+    {{else}}
+      <label for="authenticator_input">Authentication token</label>
+      <input id="authenticator_input" type="text" name="authenticator" placeholder="abcdef01-2345-6789-abcd-ef0123456789">
+
+      <br>
+    {{/if}}
+
+    Any password goes. No rules. Go wild!
     <br>
-
-    <label for="authenticator_input">Authentication token</label>
-    <input id="authenticator_input" type="authenticator" name="authenticator" value="{{ authenticator }}" placeholder="abcdef01-2345-6789-abcd-ef0123456789">
-
-    <br>
-
     <label for="password_input">New password</label>
     <input id="password_input" type="password" name="password">
 
