TIdy set people

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -331,7 +331,7 @@
 
         {{#if user.loggedIn}}
           <div class="contact-section__contact-list">
-            {{#each nonPrimaryPeople}}
+            {{#each nonDisplayPeople}}
               <div class="contact-section__contact">
                 <div class="contact-section__contact-image-wrapper">
                   <img class="contact-section__contact-image"
